--- a/src/components/HeroSeventhPage.astro
+++ b/src/components/HeroSeventhPage.astro
@@ -24,7 +24,7 @@ import astrix from "../../public/assets/whiteAsterisk.png"
                     </p>
                 </div>
                 <p class="w-[80%] text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-10">
-                    A well designed website can make a lasting impression, setting the stage for long-term success.
+                    Discover smarter, not harder—our product discovery tool reduces the effort of finding the right solutions insight, helping you make informed decisions faster
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] p-14 hidden md:flex items-start justify-center pt-24">
