--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,8 +1,8 @@
-<nav class="navbar absolute md:top-[4%] left-1/2 transform -translate-x-1/2 w-[88%] bg-transparent z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
+<nav class="navbar absolute md:top-[4%] left-1/2 transform -translate-x-1/2 w-[100%] bg-transparent z-50">
+    <div class="max-w-[95%] mx-auto flex justify-between items-center p-4">
         <div class="text-xl font-bold text-white mix-blend-difference">
             <a href="/">
-                <img src="/assets/Transparent-Logo.png" alt="logo" class="w-[50px] md:w-[80px] h-auto">
+                <img src="/assets/Transparent-Logo.png" alt="logo" class="w-[50px] md:w-[100px] h-auto">
             </a>
         </div>
         <div class="hidden md:flex items-center justify-between"> <!-- Show on medium screens and up -->
