--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import gsap from "gsap"
 import heroVideo from "../../public/assets/heroVideo2.mp4"
-import heroVideo3 from "../../public/assets/dark-overlay.mp4"
+import heroVideo3 from "/public/assets/dark-overlay.mp4"
 import HeroSixthPage from '../components/HeroSixthPage.astro';
 import HeroLastPage from '../components/HeroLastPage.astro';
 import astrixblack from "/public/assets/asterisk.png"
@@ -34,9 +34,10 @@ import StackingCardsHero from '../components/StackingCardsHero.astro';
 					autoplay 
 					loop 
 					muted 
-					class="w-full h-full object-cover vid relative"
-					<source src={heroVideo3}  />
-				/>
+					class="w-full h-full object-cover vid relative"	
+				>
+				<source src={heroVideo3}/>
+				</video>
 				<div class="absolute top-[48%] md:top-[48%] left-[50%] md:left-[36%] xl:left-[36%] 3xl:left-[33%] transform -translate-x-1/2 -translate-y-1/2 pointer-events-none z-100 ">
 					<div class="flex flex-col items-center justify-center">
 						<div class="flex flex-col md:flex-row items-center justify-start gap-2 md:gap-4 h-full" >
@@ -156,6 +157,7 @@ import StackingCardsHero from '../components/StackingCardsHero.astro';
 </style>
 
 <script>
+gsap.registerPlugin(ScrollTrigger);
 
 function delayVideoStart(videoElement, delayInSeconds) {
     // Pause the video initially
@@ -181,7 +183,7 @@ document.addEventListener('DOMContentLoaded', () => {
     }
 
 
-gsap.registerPlugin(ScrollTrigger);
+
 
 	gsap.to(".rotate", {
 		rotate: 360,
