--- a/src/components/ProductSections.astro
+++ b/src/components/ProductSections.astro
@@ -15,7 +15,7 @@ import thirdImage from "../../public/assets/third-card.png"
                         AX
                     </p>
                     <p class="text-white/70 ps-2 text-[2rem] font-bold leading-[100%] lg:leading-[100%]">
-                        Customer Experience
+                        Agent Experience
                     </p>
                 </div>
                 <div class="flex flex-col mt-16">
@@ -23,12 +23,12 @@ import thirdImage from "../../public/assets/third-card.png"
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
-                        Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
+                        Cxpoint automation tools in the contact center, businesses and contact center platform owners can significantly improve agent experience by reducing stress, increasing efficiency, and allowing agents to focus on more engaging and rewarding tasks. 
                     </p>
                 </div>
                 
                 <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-4">
-                    A well designed website can make a lasting impression, setting the stage for long-term success.
+                    This, in turn, can lead to higher job satisfaction, better performance, and lower turnover rates, ultimately benefiting both the agents and the overall customer experience.
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] md:flex hidden items-start justify-center">
@@ -89,12 +89,12 @@ import thirdImage from "../../public/assets/third-card.png"
                         First Impressions matter
                     </p>
                     <p class="text-white text-[1.1rem] font-semibold leading-[100%] w-[100%] lg:w-[70%] text-white/70">
-                        Your website, product, or branding is the first interaction potential customers have with your business.A professional design creates a strong, positive first impression, leading to increased trust and credibility.
+                        When done correctly, Automation in contact centers significantly improves customer experience by offering faster response times, 24/7 availability, consistent and accurate information, and more personalized service. It empowers customers through self-service options, reduces friction across channels, and helps businesses proactively address issues. 
                     </p>
                 </div>
                 
                 <p class="w-[80%] text-white text-[1.1rem] font-semibold leading-[100%] text-white/70 mt-4">
-                    A well designed website can make a lasting impression, setting the stage for long-term success.
+                    This leads to a better customer journey, higher loyalty, and ultimately, improved business performance which your business deserves.​
                 </p>
             </div>
             <div class="w-[50%] h-full bg-[#1E1E1D] md:flex hidden items-start justify-center">
