--- a/src/components/StatisticsGrid.astro
+++ b/src/components/StatisticsGrid.astro
@@ -9,10 +9,10 @@
                     <path d="M12.311 30.7873V21.195L3.95649 25.9911L0.862207 20.6535L9.21676 15.8574L0.862207 11.0612L3.95649 5.64626L12.311 10.4424V0.850127H18.577V10.4424L26.8541 5.64626L30.0258 11.0612L21.6712 15.8574L30.0258 20.6535L26.8541 25.9911L18.577 21.2724V30.7873H12.311Z" fill="black"></path>
                 </svg>
                 <div class="w-full">
-                    <p class="new animated-text text-sm md:text-[4rem]" data-astro-cid-tjdfhdqb="" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1;">Why it matters: Consistent brand identity</p>
+                    <p class="new animated-text text-sm md:text-[4rem]" data-astro-cid-tjdfhdqb="" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1;">Why it matters: Consistent automation and optimization</p>
                 </div>
             </div>
-            <p class="max-w-[700px] new animated-text" data-astro-cid-tjdfhdqb="" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1;">significantly impacts business success.</p>
+            <p class="max-w-[700px] new animated-text" data-astro-cid-tjdfhdqb="" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1;">on Customer service platforms significantly impacts business success.</p>
         </div>
         <!-- Stats Grid -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
@@ -20,42 +20,42 @@
             <div class="flex flex-col gap-2 lg:gap-8 stat-item">
                 <div class="text-[8rem] font-bold leading-none tracking-tight">61%</div>
                 <div class="flex flex-col ps-2 lg:ps-0">
-                    <h3 class="text-xl font-semibold text-black">More likely to buy</h3>
+                    <h3 class="text-xl font-semibold text-black">More likely to engage with brand</h3>
                     <p class="text-sm text-gray-600 leading-normal lg:leading-relaxed max-w-[90%]">
-                        61% of customers are more likely to buy from brands they recognize and trust. (Source: Nielsen)
+                        Consumers are more likely to engage with a brand that offers personalized,  and automated service to users, as long as it enhances the customer experience. <br>(Source: Nielsen Global Consumer Report​​)
                     </p>
                 </div>
             </div>
 
             <!-- Stat 2 -->
             <div class="flex flex-col gap-2 lg:gap-8 stat-item">
-                <div class="text-[8rem] font-bold leading-none tracking-tight">3.5×</div>
+                <div class="text-[8rem] font-bold leading-none tracking-tight">30%</div>
                 <div class="flex flex-col ps-2 lg:ps-0">
-                    <h3 class="text-xl font-semibold text-black">More visibility</h3>
+                    <h3 class="text-xl font-semibold text-black">Cost Savings</h3>
                     <p class="text-sm text-gray-600 leading-relaxed max-w-[90%]">
-                        Brands maintaining consistency are 3.5 times more visible to their audience. (Source: Demand Metric)
+                        Companies that implement automation in customer service can reduce operating costs by up to 30%, as automation eliminates repetitive tasks and optimizes workflows. <br>(Source: McKinsey & Company)
                     </p>
                 </div>
             </div>
 
             <!-- Stat 3 -->
             <div class="flex flex-col gap-2 lg:gap-8 stat-item">
-                <div class="text-[8rem] font-bold leading-none tracking-tight">23%</div>
+                <div class="text-[8rem] font-bold leading-none tracking-tight">60%</div>
                 <div class="flex flex-col ps-2 lg:ps-0">
-                    <h3 class="text-xl font-semibold text-black">Increase in revenue</h3>
+                    <h3 class="text-xl font-semibold text-black">Efficiency</h3>
                     <p class="text-sm text-gray-600 leading-relaxed max-w-[90%]">
-                        Consistent brand presentation can lead to an average revenue increase of 23%. (Source: Lucidpress study)
+                        Automation in business processes can boost efficiency by 40-60%, allowing agents/employees to focus on higher-value tasks while reducing human error.<br>(Source: Deloitte)
                     </p>
                 </div>
             </div>
 
             <!-- Stat 4 -->
             <div class="flex flex-col gap-8 stat-item">
-                <div class="text-[8rem] font-bold leading-none tracking-tight">94%</div>
+                <div class="text-[8rem] font-bold leading-none tracking-tight">50%</div>
                 <div class="flex flex-col">
-                    <h3 class="text-xl font-semibold text-black">First Impressions</h3>
+                    <h3 class="text-xl font-semibold text-black">Customer Satisfaction</h3>
                     <p class="text-sm text-gray-600 leading-relaxed max-w-[90%]">
-                        94% of first impressions are design-related, and when users stay longer. (Source: Study)
+                        Automated solutions improve customer satisfaction by 50% by reducing response times and providing 24/7 availability, leading to a seamless experience<br> (Source: Accenture)
                     </p>
                 </div>
             </div>
