--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -4,62 +4,62 @@
 <div class="w-screen h-full my-20 bg-[e7e7d6] ">
     <div class="w-full h-full flex items-center justify-start">
         <p class="w-full md:w-[60%] font-new font-semibold stretch text-[1.5rem] md:text-[3rem] ps-2 md:ps-16 leading-none">
-            Results That Speak: Achieve lasting impressions with our superior usability and aesthetics.
+            Results That Speak: Achieve lasting success on your Contact center platform with our superior automation capabilities
         </p>
     </div>  
     <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
         <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
             <div class="absolute w-[15%] lg:w-[45%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">108%</div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">40-70 %</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
             <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
-                Engagement and layout 
+                Automation Utilization Rate 
             </p>
             <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
-                We captivate users from the first interaction with a flawless user experience. It's not just about functionality; it's about creating an experience users love. They'll remember, talk about, and share your brand, turning customers into loyal advocates.
+                Automation tools, like Voyage, Nexa can typically handle 40% to 70% of business users and operations teams' daily tasks in contact centers, depending on the complexity of tasks and the level of automation implemented.
             </p>
         </div>
     </div>
     <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
         <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
             <div class="absolute w-[25%] lg:w-[15%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">81%</div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">30 %</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
             <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
-                Ease of use
+                Cost Reduction    
             </p>
             <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
-                Our designs eliminate the need for complex tutorials and lengthy demos. Users will love your product from the first use because it's intuitive and effortless. We create interfaces that are beautiful and easy to navigate, enhancing user satisfaction and retention.
+                Businesses using automation in their contact centers often see 20% or beyond reduction in operational costs due to efficiencies gained through reduced labor, faster response times by business teams, and streamlined workflows in contact centers as well as faster execution of changes in production with improved time to market.​
             </p>
         </div>
     </div>
     <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
         <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
             <div class="absolute w-[35%] lg:w-[35%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">3-4 x</div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">40-50 %</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
             <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
-                Speed and efficiency 
+                Customer Satisfaction Improvement 
             </p>
             <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
-                Fast, efficient, and smooth—our designs streamline user interactions, making every second count. A seamless experience reduces friction, leading to quicker adoption and happier customers.
+                With automation improving response times and providing 24/7 service, (CSAT) scores of internal teams can increase by 40% to 50% on average, particularly when tools and options are intuitive , effectively integrated to main contact center platform​.
             </p>
         </div>
     </div>
     <div class="w-full h-full flex flex-col order-1 justify-center mt-16 bg-[e7e7d6] ">
         <div class="w-full lg:h-[15rem] h-[4rem] relative bar">
             <div class="absolute w-[25%] lg:w-[25%] lg:h-[11rem] h-[2rem] bg-black z-10 black"></div>
-            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">3-4 x</div>
+            <div class="absolute w-[94%] lg:h-[11rem] h-[2rem] bg-[#FF6D00] rounded-r-[10px] lg:rounded-r-[3rem] green flex items-center justify-end pe-4 lg:pe-10 font-new font-semibold stretch lg:text-[3rem] text-[1rem] leading-none stretch">25-50 %​</div>
         </div>
         <div class="w-full flex flex-col order-2 items-start justify-center gap-4">
             <p class="font-new font-semibold stretch text-[1.5rem] md:text-[2rem] ps-2 md:ps-16 leading-none">
-                Memorable and shareable
+                Efficiency Gains
             </p>
             <p class="w-[80%] lg:w-[40%] font-new font-normal stretch text-[1rem] ps-2 md:ps-16 leading-1">
-                A great experience makes your product memorable and shareable. Our standout designs spark conversation and pride, driving organic growth through word-of-mouth.
+                Efficiency gains, such as Task Automation rate(%), Resolution time, customer wait time reduction, ROI, Operation cost savings and reduced cost per automated task can lead to 25% to 50% increases in productivity, as automation handles repetitive tasks and allows agents to focus on more complex issues.
             </p>
         </div>
     </div>
