--- a/src/pages/products/index.astro
+++ b/src/pages/products/index.astro
@@ -34,7 +34,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                 </div>
             </div>
             <div class="w-full h-full hidden lg:flex overflow-hidden">
-                <p class="text-[20px] akira mt-4 animated-text">We design <span class="px-4 py-2 rounded-full border-2 border-black text-black median mx-2">Experiences</span> that transform visions into thriving businesses </p>
+                <p class="text-[20px] akira mt-4 animated-text">Our products are designed to <span class="px-4 py-2 rounded-full border-2 border-black text-black median mx-2">Transform</span> your visions into thriving businesses by orchestering experiences</p>
             </div>
         </div>
         <div>
@@ -46,7 +46,7 @@ import StatisticsGrid from "../../components/StatisticsGrid.astro";
                 <div class="lg:w-[60%] h-full flex flex-col justify-center gap-4 lg:gap-0 lg:justify-between">
                     <div class="w-full h-fulloverflow-hidden ">
                         <p class="median text-center lg:text-right text-[17px] animated-text text-black">
-                            At CXpoint, we offer innovative tools designed to enhance customer experience for organizations of all sizes. Our solutions empower businesses to connect more effectively with their customers, fostering loyalty and satisfaction. By streamlining interactions and gathering valuable insights, CXpoint helps you elevate your customer experience to new heights.  
+                            At CXPoint, we offer cutting-edge Ai based automation tools designed to revolutionize customer experiences and contact center products across all industries. Our AI based solutions empower Contact center agents with intuitive interfaces, enabling faster operations, better platform management and reducing manual workload. Business leaders benefit from enhanced AI based analytics, gain technical insights, helping business teams to make data-driven decisions that supports on their contact center transformation and migration journey.​For contact center developers, our seamless integration capabilities allow for easy implementation of advanced automation features without disrupting existing Contact center systems. Our partnership with leading service integrators (SI) globally can quickly enable them to customize CXPoint to fit any customer environment, streamlining operations, development and maintenance processes and enhancing overall service delivery.
                         </p>
                     </div>
                     <div class="w-full h-fit lg:h-full flex items-end justify-center lg:justify-end">
