--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import gsap from "gsap"
 import heroVideo from "../../public/assets/heroVideo2.mp4"
-import heroVideo3 from "/assets/dark-overlay.mp4"
+import heroVideo3 from "/assets/darkOverlay.mp4"
 import HeroSixthPage from '../components/HeroSixthPage.astro';
 import HeroLastPage from '../components/HeroLastPage.astro';
 import astrixblack from "/public/assets/asterisk.png"
